Automating more TESTING REQUIRED

--- a/proseq/Makefile
+++ b/proseq/Makefile
@@ -1,4 +1,4 @@
-do_analysis:
-	bash preprocess.bsh
-	bash align.bsh  
-	for i in `ls *.sort.bam`; do bash proseqBamToBigWig.bsh $i; done
+hg19:
+	bash preprocess.bsh /workdir
+	bash align.bsh  /local/storage/data/short_read_index/hg19/bwa.rRNA-0.7.5a-r405/hg19.rRNA /workdir
+	for i in `ls *.sort.bam`; do bash proseqBamToBigWig.bsh $i /local/storage/data/hg19/hg19.chromInfo /workdir; done
